--- a/style.css
+++ b/style.css
@@ -41,11 +41,12 @@ button {
 }
 
 #button1 {
-  background: lightgreen;
+  background: red;
 }
 
 #button1:active, #button1.lit {
-  background: green;
+  background-image: url(https://cdn.glitch.global/a926f172-367e-4e2f-8c15-5508b0909d6e/mrkrabs.png?v=1648451576922);
+  background-size: cover;
 }
 
 #button2 {
@@ -53,7 +54,8 @@ button {
 }
 
 #button2:active, #button2.lit {
-  background: blue;
+  background-image: url(https://cdn.glitch.global/a926f172-367e-4e2f-8c15-5508b0909d6e/squidward.png?v=1648451498018);
+  background-size: cover;
 }
 
 #button3 {
@@ -61,7 +63,8 @@ button {
 }
 
 #button3:active, #button3.lit {
-  background: red;
+  background-image: url(https://cdn.glitch.global/a926f172-367e-4e2f-8c15-5508b0909d6e/patrick.png?v=1648451498050);
+  background-size: cover;
 }
 
 #button4 {
@@ -69,7 +72,22 @@ button {
 }
 
 #button4:active, #button4.lit {
-  background: yellow;
+  background-image: url(https://cdn.glitch.global/a926f172-367e-4e2f-8c15-5508b0909d6e/spongebob.jpg?v=1648451396442);
+  background-size: cover;
+}
+
+#button5 {
+  background: violet;
+}
+
+#button5:active, #button5.lit {
+  background-image: url(https://cdn.glitch.global/a926f172-367e-4e2f-8c15-5508b0909d6e/sandy.jpg?v=1648451576371);
+  background-size: cover;
+  
+}
+
+#stopBtn, stopBtn.lit {
+  background: RGB(200, 162, 200);
 }
 
 .hidden {
