⚪🎏 Updated with Glitch

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ button {
 
 #button2:active,
 #button2.lit {
-  background-image: url(https://cdn.glitch.global/a926f172-367e-4e2f-8c15-5508b0909d6e/squidward.png?v=1648451498018);
+  background-image: url(https://cdn.glitch.global/a926f172-367e-4e2f-8c15-5508b0909d6e/squidward.jpeg?v=1650691730376);
   background-size: cover;
 }
 
